--- a/src/components/product/product.scss
+++ b/src/components/product/product.scss
@@ -29,7 +29,7 @@
   gap: 20px;
   margin: 50px 0;
   .card {
-    width: 600px;
+    max-width: 600px;
     display: flex;
     flex-wrap: wrap;
     .cartImage {
@@ -111,13 +111,18 @@
   }
 }
 @media screen and (max-width: 600px) {
+  .nav {
+    width: 100%;
+  }
   .productBody {
+    width: 100%;
     flex-direction: column;
   }
   .delete {
     flex-direction: column;
   }
   .card {
+    width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
